--- a/css/page.css
+++ b/css/page.css
@@ -1,30 +1,83 @@
 
 *{  margin:0px;padding: 0px;
-    box-sizing: border-box;}
+    box-sizing: border-box;                        }
   
     
 img{
     padding:     1rem;
     max-width:  14rem;
-    max-height: 14rem; }
+    max-height: 14rem;                             }
 
 
-body{ font-family:sans-serif; font-size:1em ;
-      height: 100vh;            width:100vw ;
-      background-color:#000;color:#fff  ;}
+body{    font-family:sans-serif; font-size:1em ;
+         height: 100vh;            width:100vw ;
+         background-color:#000;color:#fff  ;  }
 
 
 header{  background-color: gray;
-         color:            #000; 
-         padding:            1rem; }
+         color:#000; padding:1rem;
 
-header > h1 { border: 1px dotted red; }
-header > nav { border: 1px dotted rgb(52, 211, 12); }
+         display: flex; flex-flow: row wrap;
+         justify-content: space-between;
+         align-items: center;                      }
+
+
+header > h1 {      /*border: 1px dotted #000;*/
+                   text-shadow: 2px 2px 0px #000;
+                   flex: 0 0 200px;                }
+
+
+header > nav {     /*border: 1px dotted #000;*/
+                   display:flex; flex-flow:row wrap;
+                   justify-content: flex-end;}
+
+
+header > nav > a{  background-color: black;
+                   color: #fff; padding:10px;   
+                   margin:5px;border-radius: 10px;
+                   text-decoration: none;
+                   text-align: center;            }
+
+
+header > nav > a:hover{
+                   background-color: #fff;
+                   color: #000;transition: background-color .5s;                     }
+
 
 main{
-    background-color:    #00ffff;
+     background-color:    #00ffff;
+     margin:10px  ;  padding:  10px;
+     border-radius:            10px;
+     box-shadow: 2px 2px 3px #000;
+     display: flex; 
+     flex-flow: row wrap;
+     justify-content: space-between;              }
+
+
+.container{
     margin:10px  ;  padding:  10px;
-    border-radius:            10px;
-    box-shadow: 2px 2px 3px #000;
+     display: flex ;
 }
 
+
+
+
+     /*AGORA VAMOS INICIAR FLEXBOX*/
+     
+    /*
+        no HEADER foram colocadas 
+        display: flex; 
+        flex-flow: row wrap;
+        justify-content: space-between;
+        
+    --------------------------
+
+      no HEADER > H1
+            flex: 0 0 200px;
+    ---------------------------
+       no   HEADER > NAV
+                   display:flex;
+                   flex-flow:row wrap;
+                   justify-content: flex-end;
+    */
+           
